--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ ga_domain: auto
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Just a dog"
+sidebar-about-description: "诗和远方吗？"
 sidebar-avatar: /img/tbag.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
