--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ baseurl: ""                             # for example, '/blog' if your blog host
 # SNS settings
 RSS: false
 #weibo_username:     huxpro
-zhihu_username:     Trex-tbag
+#zhihu_username:     Trex-tbag
 github_username:    Trex-tbag
-twitter_username:   Trex-tbag
+#twitter_username:   Trex-tbag
 #facebook_username:  huxpro
 # linkedin_username:  firstname-lastname-idxxxx
 
