--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: T-bag Blog
 SEOTitle: T-bag的博客 | tbag Blog
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
-description: "其实我是一个演员。"
+email: zweiming123@gmail.com
+description: "，"
 keyword: "Trex, T-bag的博客, 博客, 个人网站, 互联网, Web, web安全 , Python , JAVA, 移动安全 ,Android"
 url: "https://trex-tbag.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
@@ -11,7 +11,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 
 
 # SNS settings
-RSS: false
+RSS: true
 #weibo_username:     huxpro
 #zhihu_username:     Trex-tbag
 github_username:    Trex-tbag
@@ -34,6 +34,7 @@ anchorjs: true                          # if you want to customize anchor. check
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
 gems: [jekyll-paginate]
+plugins: [jekyll-paginate]
 
 
 
@@ -67,7 +68,7 @@ ga_domain: auto
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "菜的抠脚！！"
+sidebar-about-description: "！！！"
 sidebar-avatar: /img/tbag.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -87,16 +88,10 @@ service-worker: true
 # Friends
 friends: [
     {
-    #     title: "Su",
-    #     href: "http://su.gallery/"
-    # },{
         title: "test",
         href: ""
     },
     {
-    #     title: "Su",
-    #     href: "http://su.gallery/"
-    # },{
         title: "zeroisone",
         href: "https://zeroisone.cc/"
     }
